# Moto-Labs

./: .env.example  .gitignore  LICENSE  README.md  Start Moto Laps.bat  alembic.ini  pyproject.toml  run.ps1  run.sh
app/: __init__.py  backup.py  cli.py  config.py  database.py  exporter.py  logging_config.py  main.py  models.py  schemas.py  single_instance.py  video_uploads.py
app/api/: errors.py  routes.py  system.py
app/camera/: __init__.py  base.py  buffer.py  discovery.py  manager.py  sources.py  transforms.py
app/domain/: __init__.py  race.py
app/services/: camera_runtime.py  live_events.py  process_control.py  race_recording.py  video_runtime.py  vision_runtime.py
app/static/css/: app.css
app/static/js/: app.js  finish_line_editor.js  lap_state.js  race_clock.js  recognition_view.js  video_playback.js
app/templates/: index.html
app/vision/: __init__.py  detector.py  frame_selector.py  hardware.py  interfaces.py  line_crossing.py  ocr.py  pipeline.py  regions.py  tracker.py  types.py  verifier.py
data/reference/video_2026-07-19_13-50-08/: ground_truth.csv
docs/: ARCHITECTURE.md  model-provenance.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_capture_zone.py  0003_finish_line.py
scripts/: analyze_reference.py  evaluate_labeled_video.py  florence_worker.py  setup_models.py
tests/: conftest.py  test_api.py  test_camera_discovery.py  test_camera_runtime.py  test_camera_sources.py  test_database.py  test_exporter.py  test_frame_selector.py  test_lap_timing.py  test_race_recording.py  test_uploaded_video.py  test_vision_pipeline.py
tests/frontend/: finish_line_editor.test.mjs  race_clock.test.mjs  recognition_view.test.mjs  video_playback.test.mjs
