[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moto-laps"
version = "0.9.0"
description = "Minimal local motorcycle lap counter with camera number recognition"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Moto Laps contributors"}]
dependencies = [
  "alembic>=1.13,<2",
  "cv2-enumerate-cameras==1.3.3",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "numpy>=1.24,<3",
  "onnxruntime-gpu[cuda,cudnn]==1.23.2; platform_system == 'Windows' and platform_machine == 'AMD64'",
  "onnxruntime>=1.23.2,<2; platform_system != 'Windows'",
  "opencv-contrib-python==4.10.0.84",
  "openpyxl>=3.1,<4",
  "pydantic-settings>=2.2,<3",
  "paddleocr==3.7.0",
  "python-multipart>=0.0.9,<1",
  "rapidocr==3.8.1",
  "rapidocr-onnxruntime==1.4.4",
  "sqlalchemy>=2.0,<3",
  "supervision==0.29.1",
  "torch==2.13.0",
  "torchvision==0.28.0",
  "transformers==4.46.3",
  "timm>=1.0,<2",
  "accelerate>=1.6,<2",
  "einops>=0.8,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.10,<2",
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1",
  "types-openpyxl>=3.1,<4",
]

[project.scripts]
moto-laps = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/css/*.css", "static/js/*.js"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".venv", ".venv-florence", "data", "models", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
exclude = ["migrations", "models", ".venv-florence"]
